feat & fix & build : Add 14 Languages
- Adding a Language Arabic, German, Spanish, French, Hindi, Indonesian, Italian, Japanese, Polish, Portuguese, Thai, Turkish, Vietnamese, simplified Chinese
- Change some screen UI
- Troubleshooting conflicts between kapt and jdk